// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton Renders 1`] = `
[
  <button
    class="sc-bdnyFh JUQsA"
    variant="secondary"
  >
    Text
  </button>,
]
`;

exports[`LinkButton Renders primary 1`] = `
[
  <button
    class="sc-bdnyFh fBycnq"
    variant="primary"
  >
    Text
  </button>,
]
`;

exports[`LinkButton Renders secondary 1`] = `
[
  <button
    class="sc-bdnyFh JUQsA"
    variant="secondary"
  >
    Text
  </button>,
]
`;
